# sea-g2p

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
cpp/: CMakeLists.txt  README.md  benchmark.cpp  example_main.cpp
cpp/cmake/: sea_g2pConfig.cmake.in
cpp/include/sea_g2p/: datestime.hpp  g2p.hpp  misc.hpp  num2vi.hpp  numerical.hpp  regex_wrapper.hpp  resources.hpp  technical.hpp  units.hpp  vi_normalizer.hpp
cpp/src/: datestime.cpp  g2p.cpp  misc.cpp  num2vi.cpp  numerical.cpp  regex_wrapper.cpp  resources.cpp  technical.cpp  units.cpp  vi_normalizer.cpp  win_utf8.hpp
cpp/tests/: test_all.cpp
python/sea_g2p/: g2p.py  normalizer.py  pipeline.py
python/sea_g2p/vi_cleaner/: __init__.py  datestime.py  misc.py  num2vi.py  numerical.py  technical.py  units.py  vi_resources.py
scripts/: benchmark.py  example.py  future_features.py
src/: lib.rs
src/g2p/: mod.rs
src/vi_normalizer/: datestime.rs  misc.rs  mod.rs  numerical.rs  resources.rs  technical.rs  units.rs
tests/: test_normalize.py  test_phonemize.py
